[package]
name = "timeleft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image"] }
env_logger = "0.10.0"
